--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@
         height: 120px;
     }
 }
+@media screen and (max-width: 320px) {
+    .profile__avatar {
+        margin-top: 42px;
+    }
+} 
 
 .profile__info {
     margin-left: 30px;
@@ -186,6 +191,15 @@
         display: flex;
         position: absolute;
         margin: 160px 0px 0px 220px;
+    }
+}
+@media screen and (max-width: 320px){
+    .profile__button-edit {
+        min-width: 18px;
+        height: 18px;
+        display: flex;
+        position: absolute;
+        margin: 205px 0px 0px 220px;
     }
 }
 
