--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,21 @@
 .header {
-    margin: 45px 0px 0px;
+    margin: 0 auto;
+    margin-top: 45px;
     max-width: 880px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     border-bottom: 1px solid rgba(84, 84, 84, 1);
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        margin-top: 28px;
+    }
 }
