--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,8 +2,32 @@
     width: 120px;
     min-width: 120px;
     height: 120px;
-    background-image: url(././images/image.jpg);
+    background-image: url(../../../images/image.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
+
+}
+
+@media screen and (max-width: 768px) {
+    .profile__avatar {
+        width: 90px;
+        min-width: 90px;
+        height: 90px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__avatar {
+        margin: 0 auto;
+        width: 120px;
+        min-width: 120px;
+        height: 120px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .profile__avatar {
+        margin-top: 42px;
+    }
 }
