--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,13 @@
 .profile__info {
     margin-left: 30px;
     align-self: center;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__info {
+        margin: 0;
+    }
 }
