--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,4 +2,12 @@
     padding: 0;
     margin-top: 40px;
     display: flex;
+    position: relative;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile {
+        margin: 0 auto;
+        flex-direction: column;
+    }
 }
