--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,9 +5,15 @@
     color: rgba(84, 84, 84, 1);
 }
 
+@media screen and (max-width: 1024px) {
+    .footer__copyright {
+        margin: 66px 19px 36px 72px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .footer__copyright {
-        margin: 48px 19px 36px 34px;
+        margin: 48px 19px 36px 90px;
     }
 }
 
