--- a/blocks/profile/__info-job/profile__info-job.css
+++ b/blocks/profile/__info-job/profile__info-job.css
@@ -1,20 +1,26 @@
 .profile__info-job {
     margin: 0;
+    max-width: 336px;
     font-size: 18px;
     color: #FFFFFF;
     line-height: 22px;
     font-weight: 400;
     position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
     .profile__info-job {
+        max-width: 220px;
         font-size: 16px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .profile__info-job {
+        max-width: 282px;
         font-size: 14px;
         text-align: center;
         margin-bottom: 36px;
