--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -1,14 +1,19 @@
 .profile__info-name {
+    max-width: 294px;
     margin: 0;
     font-size: 42px;
     color: #FFFFFF;
     line-height: 48px;
     font-weight: 500;
     position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
     .profile__info-name {
+        max-width: 200px;
         font-size: 32px;
     }
 }
@@ -16,6 +21,7 @@
 @media screen and (max-width: 320px) {
     .profile__info-name {
         margin: 0 auto;
+        max-width: 189px;
         font-size: 27px;
         text-align: center;
         margin-top: 26px;
