fixed trabble page

--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,6 +1,6 @@
 .profile__button-add {
     margin: 0;
-    background: url(../../images/Vector_pluse.svg) center no-repeat;
+    background: url(../../../images/Vector_pluse.svg) center no-repeat;
     background-size: 15%;
     width: 150px;
     min-width: 150px;
