--- a/blocks/element/__grid/element__grid.css
+++ b/blocks/element/__grid/element__grid.css
@@ -1,4 +1,4 @@
-.element__grids {
+.element__grid {
     margin: 0;
     max-width: 100%;
     padding: 0;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .element__grids {
+    .element__grid {
         margin: 0 auto;
         gap: 20px;
         grid-template-columns: 1fr 1fr;
@@ -18,7 +18,7 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 650px) {
-    .element__grids {
+    .element__grid {
         margin: 0 auto;
         gap: 10px;
         grid-template-columns: 1fr;
