--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     max-width: 282px;
-    max-height: 361px;
+    min-height: 361px;
     display: grid;
     object-fit: cover;
     list-style: none;
