--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,5 @@
     margin: 0 auto;
     padding: 0;
     background-color: black;
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
 }
