--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,29 +6,19 @@
     height: 32px;
     cursor: pointer;
     position: absolute;
-    transform: translate(860px, 450px);
+    top: -41px;
+    left: 430px;
 }
 
 .popup__close:hover {
     opacity: 0.6;
 }
 
-@media screen and (max-width: 1024px) {
-    .popup__close {
-        transform: translate(730px, 360px);
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .popup__close {
-        transform: translate(600px, 220px);
-    }
-}
-
 @media screen and (max-width: 320px) {
     .popup__close {
         width: 20px;
         height: 20px;
-        transform: translate(280px, 235px);
+        top: -35px;
+        left: 260px;
     }
 }
