--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,23 @@
 .popup__container {
-    margin: auto auto auto auto;
     position: fixed;
+    margin: 0;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     max-width: 430px;
-    max-height: 330px;
-    inset: 0;
+    min-height: 330px;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 @media screen and (max-width: 320px) {
     .popup__container {
         max-width: 282px;
-        max-height: 322px;
+        min-height: 322px;
     }
 }
