--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -1,8 +1,7 @@
 .elements__info {
     margin: 0;
-    max-width: 282px;
-    background-color: #FFFFFF;
     display: flex;
-    justify-content: space-between;
-    border-radius: 0px 0px 10px 10px;
+    flex-direction: column;
+    max-width: 282px;
+    min-height: 362px;
 }
