--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -23,6 +23,6 @@
         max-height: 46px;
         font-size: 14px;
         line-height: 17px;
-        margin-bottom: 25px;
+        margin-top: 15px;
     }
 }
