--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,18 +7,18 @@
     cursor: pointer;
     position: absolute;
     top: -41px;
-    left: 430px;
+    right: -37px;
 }
 
 .popup__close:hover {
     opacity: 0.6;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
     .popup__close {
+        top: -35px;
+        right: 0px;
         width: 20px;
         height: 20px;
-        top: -35px;
-        left: 260px;
     }
 }
