--- a/pages/index.css
+++ b/pages/index.css
@@ -13,18 +13,18 @@
 @import url(../blocks/profile/__button-edit/profile__button-edit.css);
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__container/elements__container.css);
-@import url(../blocks/elements/__data/elements__data.css);
 @import url(../blocks/elements/__grid/elements__grid.css);
-@import url(../blocks/elements/__image/elements__image.css);
-@import url(../blocks/elements/__info/elements__info.css);
-@import url(../blocks/elements/__title/elements__title.css);
-@import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__data/element__data.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__info/element__info.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
