--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,7 @@
 .element__image {
     background-size: cover;
+    width: 100%;
     max-width: 282px;
-    max-height: 282px;
+    height: 282px;
     border-radius: 10px 10px 0px 0px;
 }
