--- a/blocks/element/__trash/element__trash.css
+++ b/blocks/element/__trash/element__trash.css
@@ -1,6 +1,7 @@
 .element__trash {
     padding: 0;
     border: none;
+    background-color: transparent;
     background: url(../../../images/deleted_icon.svg) center no-repeat;
     background-size: 100%;
     width: 18px;
@@ -8,6 +9,8 @@
     cursor: pointer;
     margin-left: 250px;
     transition: 0.2s;
+    position: absolute;
+    margin-top: 20px;
 }
 
 .element__trash:hover {
