--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,5 @@
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__card/popup__card.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__image/);
