--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,4 +1,8 @@
 .element__like-active {
     opacity: 1;
     background: url(../../../images/like_filled.svg) center no-repeat;
+    width: 22px;
+    height: 19px;
+    cursor: pointer;
+    margin-right: 20px;
 }
