--- a/blocks/elements/__grid/elements__grid.css
+++ b/blocks/elements/__grid/elements__grid.css
@@ -2,25 +2,6 @@
     margin: 0;
     max-width: 100%;
     padding: 0;
-    display: grid;
+    position: relative;
     object-fit: cover;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-    row-gap: 20px;
-    column-gap: 17px;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .elements__grid {
-        margin: 0 auto;
-        gap: 20px;
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 650px) {
-    .elements__grid {
-        margin: 0 auto;
-        gap: 20px;
-        grid-template-columns: 1fr;
-    }
 }
