--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,17 +4,22 @@
     margin-top: 50px;
     max-width: 100%;
     display: grid;
+    column-gap: 17px;
     row-gap: 20px;
-}
+    grid-template-columns: repeat(3, 282px);
+}   
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .elements {
         max-width: 584px;
+        grid-template-columns: repeat(2, 282px);
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 650px)  {
     .elements {
         margin-top: 38px;
+        max-width: 282px;
+        grid-template-columns: repeat(1, 282px);
     }
 }
