--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,6 +3,8 @@
     font-size: 24px;
     line-height: 29px;
     font-weight: 900;
+    display: flex;
+    flex-direction: row;
 }
 
 @media screen and (max-width: 320px) {
