--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,7 +1,10 @@
 .element__like {
     border: none;
-    background: url(../../../images/icon_like_outline.svg) center no-repeat;
+    background-image: url(../../../images/icon_like_outline.svg);
     background-size: 100%;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 22px;
     height: 19px;
     cursor: pointer;
