--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,11 @@
 .element__image {
     background-size: cover;
+    background-color: black;
+    display: block;
+    color: white;
     width: 100%;
     max-width: 282px;
     height: 282px;
     border-radius: 10px 10px 0px 0px;
+    cursor: pointer;
 }
