--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,7 @@
     width: 120px;
     min-width: 120px;
     height: 120px;
-    background-image: url(../../../images/image.jpg);
+    background-image: url(../../../images/434334.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
