--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,7 @@
 @import url(../blocks/popup/__image/popup__image-name.css);
 @import url(../blocks/popup/__image/popup__image-card.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_active/popup__error_active.css);
+@import url(../blocks/popup/__text/_error/popup__text_error.css);
+@import url(../blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css);
