--- a/blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css
+++ b/blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css
@@ -1,6 +1,12 @@
 .popup__submit-btn_disabled {
-    opacity: 0.2;
-    background-color: #FFFFFF;
-    color: rgba (0, 0, 0, .2);
-    cursor: default;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 2px;
+    box-sizing: border-box;
+    color: rgba(0,0,0,.2);
+    pointer-events: none;
+}
+
+.popup__submit-btn_disabled:disabled {
+  
 }
