--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {
     border: none;
-    background: url(../../../images/Close\ Icon.svg) center no-repeat;
+    background: url(../../../images/close_icon.svg) center no-repeat;
     background-size: 100%;
     width: 32px;
     height: 32px;
